--- a/style.css
+++ b/style.css
@@ -281,13 +281,13 @@
   height: 40px;
   cursor: pointer;
   transition: all ease .3s;
-  box-shadow: 0px 5px 13px 0px rgba(0, 0, 0, 0.61);
-  -webkit-box-shadow: 0px 5px 13px 0px rgba(0, 0, 0, 0.61);
-  -moz-box-shadow: 0px 5px 13px 0px rgba(0, 0, 0, 0.61);
 }
 
 .setting-option:hover {
-  transform: translateY(-3px);
+  box-shadow: 0px 5px 13px 0px rgba(0, 0, 0, 0.61);
+  -webkit-box-shadow: 0px 5px 13px 0px rgba(0, 0, 0, 0.61);
+  -moz-box-shadow: 0px 5px 13px 0px rgba(0, 0, 0, 0.61);
+  /* transform: translateY(-3px); */
 }
 
 .setting-option:nth-child(1) {
@@ -323,7 +323,7 @@
 
 .setting-option-icon {
   margin-top: 3px;
-  font-size: 16px;
+  font-size: 10px;
   left: 1;
   opacity: 0;
   transition: all ease 1s;
